apps/web/kimai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kimai
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kimai
  template:
    metadata:
      labels:
        app: kimai

    spec:
      containers:
      - name: kimai
        image: replaced-by-kustomize
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "4000m"
        ports:
          - containerPort: 8001
        volumeMounts:
        - name: kimai-data
          mountPath: /opt/kimai/var
        # livenessProbe:
        #   httpGet:
        #     path: /api/healthz
        #     port: 3000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
      volumes:
      - name: kimai-data
        hostPath:
          path: /lxc-configs/kimai-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
